Fixing weather button overlap on iphone SE model

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
   .primary-link {
     border-radius: 4px;
     padding: 15px 10px;
+    font-size: 12px;
     text-decoration: none;
     text-transform: capitalize;
     background: var(--primary-color);
